# bevy_more_shapes

./: .gitignore  Cargo.toml  LICENSE  README.md  migrations.md
examples/: gallery.rs
src/: cone.rs  curve.rs  cylinder.rs  grid.rs  lib.rs  polygon.rs  torus.rs  tube.rs  util.rs
