[package]
name = "bevy_more_shapes"
version = "0.2.1"
edition = "2021"
authors = ["Leon Suchy"]
license = "MIT OR Apache-2.0"
description = "Bevy engine plugin that adds additional shapes to the existing collection of procedurally generated geometry."
readme = "README.md"
keywords = ["gamedev", "graphics", "bevy", "geometry", "shapes"]
categories = ["graphics", "game-development"]
repository = "https://github.com/redpandamonium/bevy_more_shapes"

[dependencies]
bevy = { version = "0.7", features = ["render"] }
triangulate = "0.1.0"

[dev-dependencies]
bevy = "0.7"
smooth-bevy-cameras = "0.3"