[package]
name = "bevy_more_shapes"
version = "0.4.0"
edition = "2021"
authors = ["Leon Suchy"]
license = "MIT OR Apache-2.0"
description = "Bevy engine plugin that adds additional shapes to the existing collection of procedurally generated geometry."
readme = "README.md"
keywords = ["gamedev", "graphics", "bevy", "geometry", "shapes"]
categories = ["graphics", "game-development"]
repository = "https://github.com/redpandamonium/bevy_more_shapes"

[dependencies]
# The parts of bevy relevant to meshes and shapes as well as math
bevy = { version = "0.10", features = ["bevy_render"] }
# This crate is used to triangulate polygons.
triangulate = "0.2.0"

[dev-dependencies]
# For the showcase we need the full capabilities of the engine.
bevy = "0.10"
# First person camera controller
smooth-bevy-cameras = "0.8"
